c4ang-platform-core를 서브모듈로 추가 및 해당 레포의 테스트 관련 코드를 참조하게 변경 (#2)
* submodule: c4ang-infra change head(main)

* submodule: adding c4ang-platform core head(main)

* feat: 변경된 platform-core의 패키지 경로를 반영

* feat: e2e 관련 코드를 제거.

시나리오 테스트는 c4ang-quality-gate에서 검증할 예정.